# ch347programmer

./: .gitignore  CMakeLists.txt  Makefile.mingw  README.md  ch341_compat.c  ch341_compat.def  ch341_compat.h
ch347-flasher/src/: app.js  index.html  styles.css
ch347-flasher/src-tauri/: Cargo.toml  tauri.conf.json
ch347-flasher/src-tauri/capabilities/: default.json
ch347-flasher/src-tauri/src/: ch347.rs  flash.rs  lib.rs  main.rs
